# rust-bitmap

./: .gitignore  .travis.yml  Cargo.toml  README.rst  lib.rs
src/: bitmap.rs  lib.rs
