[package]

name = "bitmap"
version = "1.0.2"
authors = ["Corey Richardson <corey@octayn.net>"]

description = "A dense bitmap"
repository = "https://github.com/cmr/rust-bitmap"
homepage = "https://github.com/cmr/rust-bitmap"

readme = "README.rst"
license = "BSL-1.0"

[dev-dependencies]
quickcheck = "*"
